--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<a href="#" class="image fit"><img src="images/Windturbine.jpg" alt="" /></a>
 									<p>Final Year project involving the development of Monte Carlo prediction algorithms within Matlab in order to predict future wind energy output from UK wind farms.</p>
 									<ul class="actions special">
-										<li><a href="https://leeds365-my.sharepoint.com/:b:/g/personal/mn19cmp_leeds_ac_uk/EZbZNOTBB5FAqH_PSoFC1OIB9I7jet1ajwuYR1_Gz7EGig?e=CVT7UA" class="button">Project Report</a></li>
+										<li><a href="https://1drv.ms/b/s!AnQ5-XXuI0cmhEfz1q7gilheEruE?e=x1dHIX" class="button">Project Report</a></li>
 									</ul>
 								</article>
 
